Sat Dec 18 00:09:49 2004  Tim Janik  <timj@gtk.org>

	* configure.in: released 0.6.4, interface 0, binary 0.
	CFLAGS and CXXFLAGS fixups.

Thu Nov 18 15:10:33 2004  Tim Janik  <timj@gtk.org>

        * configure.in: released bse-alsa 0.6.3, binary 0, interface 0.

Mon Oct  4 09:42:31 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c: more libALSA silencing, to prevent error messages
	in blocking mode with xrun-stop enabled.

Mon Oct  4 09:16:16 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c (alsa_device_write): use snd_pcm_forward() and
	silence libALSA with snd_lib_error_set_handler().

Mon Oct  4 08:59:13 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c (bse_midi_device_alsa_open): 
	* bsepcmdevice-alsa.c (bse_pcm_device_alsa_open): silence alsalib during
	open() calls to avoid EBUSY error messages.

Sun Oct  3 19:02:46 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c (alsa_device_check_io): fixed signed/unsigned
	comparison bug, reported by stefan.

Sat Oct  2 04:54:22 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c (bse_midi_device_alsa_open): open devices 
	non-blocking so we don't hang on concurrent access.

Wed Sep 29 20:22:53 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c: poll-fd fixups. removed debugging code.

Wed Sep 29 19:51:29 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c: handle IO through sequencer io watch.

Tue Sep 28 04:25:21 2004  Tim Janik  <timj@gtk.org>

	* configure.in: fixed up package name.

	* README: describe installation path handling of this package.

	* Makefile.am: fix include paths.

Tue Sep 28 01:45:21 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c: preliminary implementation of read handler.

Tue Sep 28 00:57:57 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c (alsa_device_write): issue dummy reads instead of
	calling snd_pcm_forward() which produces annoying debugging messages.

Tue Sep 28 00:38:31 2004  Tim Janik  <timj@gtk.org>
