@@ -15,40 +15,40 @@ AC_PREREQ(2.57)
 # Package version numbers
 #
 AC_DIVERT_BEFORE_HELP([
-PKG_MAJOR_VERSION=0
-PKG_MINOR_VERSION=6
-PKG_MICRO_VERSION=4
-PKG_INTERFACE_AGE=0
-PKG_BINARY_AGE=0
+PACKAGE_MAJOR_VERSION=0
+PACKAGE_MINOR_VERSION=6
+PACKAGE_MICRO_VERSION=6
+PACKAGE_INTERFACE_AGE=0
+PACKAGE_BINARY_AGE=0
 ])
 dnl#
 dnl# Making releases:
-dnl#   PKG_MICRO_VERSION += 1;
-dnl#   PKG_INTERFACE_AGE += 1;
-dnl#   PKG_BINARY_AGE += 1;
-dnl# if any functions have been added, set PKG_INTERFACE_AGE to 0.
+dnl#   PACKAGE_MICRO_VERSION += 1;
+dnl#   PACKAGE_INTERFACE_AGE += 1;
+dnl#   PACKAGE_BINARY_AGE += 1;
+dnl# if any functions have been added, set PACKAGE_INTERFACE_AGE to 0.
 dnl# if backwards compatibility has been broken,
-dnl# set PKG_BINARY_AGE _and_ PKG_INTERFACE_AGE to 0.
-dnl# PKG_RELEASE_CANDIDATE may contain rc[0-9]+ or nothing
-PKG_RELEASE_CANDIDATE= #rc1
+dnl# set PACKAGE_BINARY_AGE _and_ PACKAGE_INTERFACE_AGE to 0.
+dnl# PACKAGE_RELEASE_CANDIDATE may contain rc[0-9]+ or nothing
+PACKAGE_RELEASE_CANDIDATE= #rc1
 
 # version number setup
-PKG_VERSION=$PKG_MAJOR_VERSION.$PKG_MINOR_VERSION.$PKG_MICRO_VERSION
-if test -n "$PKG_RELEASE_CANDIDATE" ; then
-    PKG_VERSION=$PKG_VERSION-$PKG_RELEASE_CANDIDATE
+PACKAGE_VERSION=$PACKAGE_MAJOR_VERSION.$PACKAGE_MINOR_VERSION.$PACKAGE_MICRO_VERSION
+if test -n "$PACKAGE_RELEASE_CANDIDATE" ; then
+    PACKAGE_VERSION=$PACKAGE_VERSION-$PACKAGE_RELEASE_CANDIDATE
 fi
-AC_SUBST(PKG_MAJOR_VERSION)
-AC_SUBST(PKG_MINOR_VERSION)
-AC_SUBST(PKG_MICRO_VERSION)
-AC_SUBST(PKG_INTERFACE_AGE)
-AC_SUBST(PKG_BINARY_AGE)
-AC_SUBST(PKG_VERSION)
+AC_SUBST(PACKAGE_MAJOR_VERSION)
+AC_SUBST(PACKAGE_MINOR_VERSION)
+AC_SUBST(PACKAGE_MICRO_VERSION)
+AC_SUBST(PACKAGE_INTERFACE_AGE)
+AC_SUBST(PACKAGE_BINARY_AGE)
+AC_SUBST(PACKAGE_VERSION)
 
 # compute libtool versions
-LT_RELEASE=$PKG_MAJOR_VERSION.$PKG_MINOR_VERSION
-LT_CURRENT=`expr $PKG_MICRO_VERSION - $PKG_INTERFACE_AGE`
-LT_REVISION=$PKG_INTERFACE_AGE
-LT_AGE=`expr $PKG_BINARY_AGE - $PKG_INTERFACE_AGE`
+LT_RELEASE=$PACKAGE_MAJOR_VERSION.$PACKAGE_MINOR_VERSION
+LT_CURRENT=`expr $PACKAGE_MICRO_VERSION - $PACKAGE_INTERFACE_AGE`
+LT_REVISION=$PACKAGE_INTERFACE_AGE
+LT_AGE=`expr $PACKAGE_BINARY_AGE - $PACKAGE_INTERFACE_AGE`
 AC_SUBST(LT_RELEASE)
 AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_REVISION)
@@ -57,7 +57,7 @@ AC_SUBST(LT_AGE)
 dnl figure debugging default, prior to $ac_help setup
 dnl
 AC_DIVERT_BEFORE_HELP([
-if test `expr $PKG_MINOR_VERSION \% 2 \| $PKG_MAJOR_VERSION \< 1` = 1 ; then
+if test `expr $PACKAGE_MINOR_VERSION \% 2 \| $PACKAGE_MAJOR_VERSION \< 1` = 1 ; then
         debug_default=yes
 else
         debug_default=minimum
@@ -66,7 +66,7 @@ fi
 
 
 # initialize automake, don't define PACKAGE and VERSION
-AM_INIT_AUTOMAKE(bse-alsa, $PKG_VERSION, no-define)
+AM_INIT_AUTOMAKE(bse-alsa, $PACKAGE_VERSION, no-define)
 
 # in case we have subdirectories.
 AC_PROG_MAKE_SET
@@ -75,7 +75,7 @@ AM_MAINTAINER_MODE
 
 # architecture information
 AC_CANONICAL_TARGET
-AC_DEFINE_UNQUOTED(PKG_ARCH_NAME, "$target", [Architecture Description])
+AC_DEFINE_UNQUOTED(PACKAGE_ARCH_NAME, "$target", [Architecture Description])
 
 # declare --enable-* args and collect ac_help strings
 AC_ARG_ENABLE(debug,       [  --enable-debug=[no/minimum/yes] turn on debugging [default=$debug_default]],,enable_debug=$debug_default)
@@ -112,7 +112,7 @@ dnl
 AC_DEFUN(AC_LIBBSE_CHECK,
 [
     dnl We need BSE, GLib, etc.
-    PKG_CHECK_MODULES(BSE, bse >= 0.6.3)
+    PKG_CHECK_MODULES(BSE, bse >= 0.6.6)
     AC_SUBST(BSE_CFLAGS)
     AC_SUBST(BSE_LIBS)
 
